revno: 13840 message:   Minor fixes based on FindBugs
committer: Lars Helge Øverland <larshelge@gmail.com>
branch nick: dhis2
timestamp: Fri 2014-01-24 10:41:50 +0200